--- a/app/src/main/res/layout/activity_note_paper.xml
+++ b/app/src/main/res/layout/activity_note_paper.xml
@@ -31,4 +31,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/save"
+        android:onClick="saveButton" />
 </RelativeLayout>
